--- a/src/static/client/site/main.html
+++ b/src/static/client/site/main.html
@@ -6,8 +6,8 @@
   -->
 
 <meta charset="utf-8">
-<meta name="keywords" content="Sem, Alexander Orlov, Beauty, Simplicity, Flexibility, Zen, RESTful">
-<meta name="description" content="Sem Entity Manager">
+<meta name="keywords" content="Erpiv, Alexander Orlov, Beauty, Simplicity, Flexibility, Zen, RESTful">
+<meta name="description" content="Erpiv Entity Manager">
 <meta name="author" content="Loxal - Alexander Orlov <alexander.orlov@loxal.net>">
 <link rel="stylesheet" href="/static/theme/winter.css" type="text/css">
 <!--[if IE]>
@@ -25,7 +25,7 @@
     });
 </script>
 <![endif]-->
-<title>Sem | Loxal</title>
+<title>Erpiv | Loxal</title>
 <script src="../obf/less.js" type="text/javascript"></script>
 <link rel="stylesheet/less" type="text/css" href="styles.less">
 
@@ -106,7 +106,7 @@
     <div id="header-title">
         <img id="logo" src="http://module.loxal.net/resource/logo.png" alt="Logo" title="Site Logo" width="96"
              height="96"/>
-        <a href="/#" id="title" title="Home">Sem</a>
+        <a href="/#" id="title" title="Home">Erpiv</a>
 
         <div id="header-description"></div>
     </div>
@@ -136,9 +136,8 @@
 <div id="footer">
     <p>
         <span>
-            Powered by <a href="http://dev.loxal.net" title="Sem @ Google App Engine">
-            Sem@<abbr title="Google App Engine">GAE</abbr> (Go) <abbr
-                title="Dart/HTML5 backend client">BC</abbr></a>
+            Powered by <a href="http://dev.loxal.net" title="Erpiv @ Cloud">
+            Erpiv@Cloud<abbr title="Dart/HTML5 backend client">BC</abbr></a>
         </span>
         <span style="float: right;">
             <a href="javascript:navTo('#imprint');" title="with contact form">Imprint</a> | &copy; <span
