works in Dart Editor

--- a/src/static/client/symbol-lister.html
+++ b/src/static/client/symbol-lister.html
@@ -6,3 +6,6 @@
   -->
 
 <script type="application/dart" src="symbol-lister.dart"></script>
+<!--
+<script src="symbol-lister.dart.js"></script>
+-->
