--- a/src/static/client/main.html
+++ b/src/static/client/main.html
@@ -5,7 +5,7 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="symbol-lister.dart"></script>
+<script type="application/dart" src="EntityLister.dart"></script>
 <!--
 <script src="symbol-lister.dart.js"></script>
 -->
