--- a/src/static/client/main.html
+++ b/src/static/client/main.html
@@ -6,6 +6,7 @@
   -->
 
 <script type="application/dart" src="EntityLister.dart"></script>
+<script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 <!--
-<script src="symbol-lister.dart.js"></script>
+	<script src="symbol-lister.dart.js"></script>
 -->
