--- a/src/static/client/main.html
+++ b/src/static/client/main.html
@@ -5,5 +5,5 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="EntityLister.dart"></script>
+<script type="application/dart" src="entity_lister.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
