--- a/src/static/client/main.html
+++ b/src/static/client/main.html
@@ -6,5 +6,5 @@
   -->
 
 <script type="application/dart" src="entity_lister.dart"></script>
-<script type="application/dart" src="test.dart"></script>
+<script type="application/dart" src="ui_test.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
