--- a/src/dingbats/main.html
+++ b/src/dingbats/main.html
@@ -5,6 +5,6 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="entity_overview.dart"></script>
-<script type="application/dart" src="ui_test.dart"></script>
+<script type="application/dart" src="dingbat_overview.dart"></script>
+<!--<script type="application/dart" src="ui_test.dart"></script>-->
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
