--- a/src/dingbats/main.html
+++ b/src/dingbats/main.html
@@ -8,3 +8,4 @@
 <script type="application/dart" src="dingbat_overview.dart"></script>
 <!--<script type="application/dart" src="ui_test.dart"></script>-->
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+<!--<script src="out.js"></script>-->
