--- a/src/client/type_trainer/main.html
+++ b/src/client/type_trainer/main.html
@@ -5,5 +5,6 @@
   ~ license that can be found in the LICENSE file.
   -->
 
+<html manifest="main.appcache">
 <script type="application/dart" src="type_trainer.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
