--- a/src/client/auth/main.html
+++ b/src/client/auth/main.html
@@ -5,6 +5,7 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="async.dart"></script>
-<!--<script type="application/dart" src="test.dart"></script>-->
+<script type="application/dart" src="auth.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+
+
