--- a/src/client/bmi_calculator/main.html
+++ b/src/client/bmi_calculator/main.html
@@ -8,3 +8,7 @@
 <html manifest="main.appcache">
 <script type="application/dart" src="main.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+
+<input type="button" class="best"/>
+<input type="button" class="best"/>
+<input type="button" class="best"/>
