--- a/src/client/incubator/main.html
+++ b/src/client/incubator/main.html
@@ -7,3 +7,5 @@
 
 <script type="application/dart" src="main.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+
+        <canvas id="canvas" width="300" height="300"></canvas>
