--- a/src/client/incubator/main.html
+++ b/src/client/incubator/main.html
@@ -5,13 +5,9 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="main.dart"></script>
+<script type="application/dart" src="gwt_bootstrapper.dart"></script>
+<!--<script type="application/dart" src="main.dart"></script>-->
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 
 
-<table id="tabTest">
-    <thead>
-    </thead>
-    <tbody id="tbody">
-    </tbody>
-</table>
+<script id="module"></script>
