uni test infrastructure for algorithm testing

--- a/src/client/incubator/main.html
+++ b/src/client/incubator/main.html
@@ -5,9 +5,8 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="gwt_bootstrapper.dart"></script>
-<!--<script type="application/dart" src="main.dart"></script>-->
+<script type="application/dart" src="main.dart"></script>
 <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 
 
-<script id="module"></script>
+<output id="out">default</output>
