--- a/src/client/type_trainer/main.html
+++ b/src/client/type_trainer/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
-  ~ Copyright 2012 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
+  ~ Copyright 2015 Alexander Orlov <alexander.orlov@loxal.net>. All rights reserved.
   ~ Use of this source code is governed by a BSD-style
   ~ license that can be found in the LICENSE file.
   -->
 
 <html manifest="main.appcache">
 <script type="application/dart" src="type_trainer.dart"></script>
-<script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+<!--<script src="packages/browser/dart.js"></script>-->
