fix all products

--- a/src/client/type_trainer/main.html
+++ b/src/client/type_trainer/main.html
@@ -5,6 +5,6 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<html manifest="main.appcache">
+<!--<html manifest="main.appcache">-->
 <script type="application/dart" src="type_trainer.dart"></script>
-<!--<script src="packages/browser/dart.js"></script>-->
+<script src="packages/browser/dart.js"></script>
