add JavaScript output

--- a/src/client/type_trainer/web/index.html
+++ b/src/client/type_trainer/web/index.html
@@ -6,5 +6,5 @@
   -->
 
 <!--<html manifest="main.appcache">-->
-<script type="application/dart" src="type_trainer.dart"></script>
+<script type="application/dart" src="main.dart"></script>
 <script src="packages/browser/dart.js"></script>
