--- a/src/client/dingbats/web/index.html
+++ b/src/client/dingbats/web/index.html
@@ -5,4 +5,5 @@
   ~ license that can be found in the LICENSE file.
   -->
 
-<script type="application/dart" src="dingbat_overview.dart"></script>
+<script type="application/dart" src="main.dart"></script>
+<script src="packages/browser/dart.js"></script>
